# franka_ros2_multimanual

./: CMakeLists.txt  README.md  gendoc
.github/workflow/: webpage.yml
.github/workflows/: main.yml  webpage.yml
config/: basic_controllers.yaml
franka_bimanual_hardware_interface/: CMakeLists.txt  franka_bimanual_hardware_interface.xml  package.xml
franka_bimanual_hardware_interface/include/franka_bimanual_hardware_interface/: franka_bimanual_hardware_interface.hpp  franka_wrapper.hpp  lambda_control.hpp  mode_switch_plan.hpp
franka_bimanual_hardware_interface/scripts/: cart_pos_test.py  cart_vel_test.py  effort_test.py  position_test.py  velocity_test.py
franka_bimanual_hardware_interface/src/: franka_bimanual_hardware_interface.cpp  franka_wrapper.cpp  lambda_control.cpp  mode_switch_plan.cpp
franka_description/robots/common/: franka_arm.ros2_control.xacro  franka_robot.xacro
franka_mm_control/: CMakeLists.txt  franka_mm_control.xml  package.xml
franka_mm_control/config/: basic_controllers.yaml
franka_mm_control/include/franka_mm_control/: pose_reader.hpp
franka_mm_control/scripts/: position_test.py
franka_mm_control/src/: pose_reader.cpp  position_reader.cpp
franka_mm_hardware_interface/: CMakeLists.txt  package.xml
franka_mm_hardware_interface/include/franka_mm_hardware_interface/: control_modes.hpp  franka_mm_hardware_interface.hpp  franka_param_service_server.hpp  franka_wrapper.hpp  interfaces.hpp  lambda_control.hpp  mode_switch_plan.hpp
franka_mm_hardware_interface/scripts/: cart_pos_test.py  effort_test.py  position_test.py  velocity_test.py
franka_mm_hardware_interface/src/: franka_mm_hardware_interface.cpp  franka_param_service_server.cpp  franka_wrapper.cpp  lambda_control.cpp  mode_switch_plan.cpp
idra_franka_launch/: CMakeLists.txt
idra_franka_launch/config/: basic_controllers.yaml
idra_franka_launch/launch/: bimanual.launch.py
idra_franka_launch/scripts/: gear_pick.py
idra_franka_launch/urdf/: bimanual.urdf.xacro
idra_franka_launch/webdocs/: index.html
launch/: bimanual.launch.py  franka1.launch.py  franka2.launch.py
rviz/: bimanual.rviz
urdf/: bimanual.urdf.xacro
webdocs/: README.md  doxyfile  homepage.md  index.html  report.tex
webdocs/static/css/: style.css
